<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>

    <string name="action_change_units">@string/pref_display_mode_key</string>

    <string name="dialog_title" translatable="true">Add Stock</string>
    <string name="dialog_hint" translatable="true">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel" translatable="true">Cancel</string>
    <string name="dialog_add" translatable="true">Add</string>
    <string name="dialog_description" translatable="true">Search and Add Stocks</string>

    <string name="error_no_network" translatable="true">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks" translatable="true">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_no_stocks_added" translatable="true">Stock does not exist!</string>
    <string name="toast_stock_added_no_connectivity" translatable="true">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity" translatable="true">Will refresh when network available.</string>
    <string name="toast_stock_already_exists">already exists!</string>
    <string name="toast_stock_added">added to watchlist</string>

    <string name="widget_click_position" translatable="false">position</string>

    <string name="date_today" translatable="true">Today</string>
    
    <string name="bnv_item_1_week">1W</string>
    <string name="bnv_item_1_month">1M</string>
    <string name="bnv_item_6_month">6M</string>
    <string name="bnv_item_1_year">1Y</string>
    <string name="bnv_item_2_year">2Y</string>

</resources>
