<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/history_1w"
        android:enabled="true"
        android:title="@string/bnv_item_1_week"
        app:showAsAction="always" />
    <item
        android:id="@+id/history_1m"
        android:enabled="true"
        android:title="@string/bnv_item_1_month"
        app:showAsAction="always" />
    <item
        android:id="@+id/history_6m"
        android:enabled="true"
        android:title="@string/bnv_item_6_month"
        app:showAsAction="always" />
    <item
        android:id="@+id/history_1y"
        android:enabled="true"
        android:title="@string/bnv_item_1_year"
        app:showAsAction="always" />
    <item
        android:id="@+id/history_2y"
        android:enabled="true"
        android:title="@string/bnv_item_2_year"
        app:showAsAction="always" />

</menu>